--- a/src/main/java/gui/sample.fxml
+++ b/src/main/java/gui/sample.fxml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.GridPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<AnchorPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.Controller">
    <children>
       <MenuBar prefHeight="20.0" AnchorPane.bottomAnchor="576.0" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="1.0">
         <menus>
@@ -34,19 +35,34 @@
         <tabs>
           <Tab text="Oracle-PostgreSQL">
                <content>
-                  <ScrollPane fitToHeight="true" fitToWidth="true">
-                     <content>
-                        <TableView fx:id="reportTable" prefHeight="200.0" prefWidth="200.0">
-                          <columns>
-                            <TableColumn id="category" fx:id="category" maxWidth="100.0" minWidth="0.0" prefWidth="75.0" text="Categories" />
-                            <TableColumn id="build" fx:id="build" prefWidth="723.0" />
-                          </columns>
-                           <columnResizePolicy>
-                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                           </columnResizePolicy>
-                        </TableView>
-                     </content>
-                  </ScrollPane>
+                  <GridPane>
+                     <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints maxHeight="25.0" minHeight="25.0" prefHeight="25.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="473.33333587646484" minHeight="10.0" prefHeight="465.66666412353516" vgrow="SOMETIMES" />
+                     </rowConstraints>
+                     <children>
+                        <ScrollPane fitToHeight="true" fitToWidth="true" GridPane.rowIndex="1">
+                           <content>
+                              <TableView id="category" fx:id="reportTable" prefHeight="466.0" prefWidth="798.0">
+                                 <columns>
+                                    <TableColumn fx:id="category" prefWidth="75.0" text="Categoories" />
+                                 </columns>
+                              </TableView>
+                           </content>
+                        </ScrollPane>
+                        <Label prefHeight="0.0" prefWidth="173.0" text="Conversion general statistic">
+                           <font>
+                              <Font name="Arial" size="14.0" />
+                           </font>
+                        </Label>
+                     </children>
+                     <opaqueInsets>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </opaqueInsets>
+                  </GridPane>
                </content>
             </Tab>
         </tabs>
