*Add tab was created

--- a/src/main/java/gui/tabmodel.fxml
+++ b/src/main/java/gui/tabmodel.fxml
@@ -8,8 +8,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.Controller">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.tabModelController">
    <children>
       <TabPane fx:id="tabPane" layoutX="10.0" layoutY="30.0" tabClosingPolicy="UNAVAILABLE">
          <tabs>
