--- a/src/main/java/gui/sample.fxml
+++ b/src/main/java/gui/sample.fxml
@@ -31,7 +31,7 @@
         </menus>
       </MenuBar>
       <Button id="btnCancel" layoutX="700.0" layoutY="560.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onCancelClickMethod" prefHeight="30.0" prefWidth="90.0" text="Cancel" textAlignment="CENTER" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0" />
-      <Button id="refresh" fx:id="refresh" layoutX="600.0" layoutY="560.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onRefreshClickMethod" prefHeight="30.0" prefWidth="90.0" text="Upload" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="110.0" />
+      <Button id="refresh" fx:id="refresh" layoutX="600.0" layoutY="560.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onTestAddData" prefHeight="30.0" prefWidth="90.0" text="Upload" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="110.0" />
       <Separator layoutY="547.0" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="3.0" prefWidth="800.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="2.0" AnchorPane.rightAnchor="0.0" />
       <TabPane fx:id="tabPane" layoutY="20.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="63.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="20.0">
         <tabs>
