--- a/src/main/java/gui/addtab.fxml
+++ b/src/main/java/gui/addtab.fxml
@@ -48,6 +48,6 @@
          </font>
       </Label>
       <ComboBox fx:id="cbTarget" layoutX="165.0" layoutY="213.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="30.0" prefWidth="200.0" AnchorPane.bottomAnchor="70.0" AnchorPane.rightAnchor="10.0" />
-      <ComboBox fx:id="cbSource" layoutX="90.0" layoutY="158.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="30.0" prefWidth="200.0" AnchorPane.bottomAnchor="110.0" AnchorPane.rightAnchor="10.0" />
+      <ComboBox fx:id="cbSource" layoutX="90.0" layoutY="158.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onAction="#setOnSelect" prefHeight="30.0" prefWidth="200.0" AnchorPane.bottomAnchor="110.0" AnchorPane.rightAnchor="10.0" />
    </children>
 </AnchorPane>
